<resources>
  <string name="app_name">ISDb</string>
  <string name="start_coding">Start Coding</string>
  <string name="done">Done</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="tag">TAGS:</string>
  <string name="logged_In">Successfully Logged In</string>
  <string name="register_success">Registered Successfully</string>
  <string name="logIn_error">Cannot log in :(</string>
  <string name="exist_already">User Already Exists. Please log in</string>
  <string name="created">User Registered</string>
  <string name="base_url">https://pure-ridge-30175.herokuapp.com</string>
  <string name="create_account">Create Account</string>
  <string name="email">Email</string>
  <string name="email_hint">Email</string>
  <string name="loading">Loading…</string>
  <string name="login">Login</string>
  <string name="name">Name</string>
  <string name="password_hint">Password</string>
  <string name="password">Password</string>
  <string name="register">Register</string>
  <string name="sign_in">Sign in</string>
  <string name="welcome">Welcome!</string>
  <string name="url">http://10.0.2.2:8080</string>
  <string name="username">Username</string>
  <string name="show_password">Show Password</string>
  <string name="loading_screen_image">Loading screen image</string>
  <string name="image_for_back_button">Image for back button</string>
  <string name="button_to_login">Button to login</string>
  <string name="isdb">isdb</string>
  <string name="song_image">song image</string>
  <string name="song_name">song name</string>
  <string name="album_name">album name:</string>
  <string name="release_date">release date:</string>
  <string name="critic_s_score">critic\'s score:</string>
  <string name="fan_s_score">fan\'s score:</string>
  <string name="rate">Rate the song</string>
  <string name="home">home</string>
  <string name="search">search</string>
  <string name="user">user</string>
  <string name="full_score">/5.00</string>
  <string name="image_for_ratings">image for ratings</string>
  <string name="app_logo">app logo</string>
  <string name="user_image">user image</string>
  <string name="search_for_a_song">search for a song…</string>
  <string name="server_down">Server down, please try again :(</string>
  <string name="menuSearch">search</string>
  <string name="logo_for_the_app">Logo for the app</string>
  <string name="title_activity_login">LoginActivity</string>
  <string name="prompt_email">Email</string>
  <string name="prompt_password">Password</string>
  <string name="action_sign_in">Sign in or register</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="invalid_username">Not a valid username</string>
  <string name="invalid_email">Not a valid email Id</string>
  <string name="invalid_password">Password must be >5 characters</string>
  <string name="login_failed">"Login failed"</string>
  <string name="title_activity_aactivity">AActivity</string>
</resources>