<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:background="@drawable/logo_app">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="start"
            android:background="@drawable/ic_baseline_keyboard_backspace_24"
            android:contentDescription="@string/image_for_back_button" />

        <ImageView
            android:layout_marginTop="120dp"
            android:layout_marginStart="20dp"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:src="@drawable/valid_app_logo_please_load" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="32dp"
        android:paddingRight="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="#000000"
            android:textSize="36sp"
            android:layout_marginBottom="12dp"
            />

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:autofillHints="@string/name" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:autofillHints="@string/emailHint" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="@string/passwordHint" />

        <CheckBox
            android:id="@+id/checkPasswordRegister"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:textColor="#000"
            android:text="@string/show_password" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_signup"
            android:src="@drawable/ic_baseline_arrow_forward_ios_24"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#DDF5EF"
            android:padding="12dp"
            android:contentDescription="@string/button_to_login" />

    </LinearLayout>
</LinearLayout>
