<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:background="@drawable/logo_app">

        <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="start"
        android:background="@drawable/ic_baseline_keyboard_backspace_24"
        android:contentDescription="@string/image_for_back_button" />

        <ImageView
            android:layout_marginTop="120dp"
            android:layout_marginStart="20dp"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:src="@drawable/valid_app_logo_please_load" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="32dp"
        android:paddingRight="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="2dp"
            android:text="@string/login"
            android:textColor="#000"
            android:textSize="36sp"/>

        <EditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:inputType="textEmailAddress"
            android:autofillHints="@string/username" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="@string/password" />

        <CheckBox
            android:id="@+id/check_password_login"
            android:layout_width="180dp"
            android:layout_height="32dp"
            android:layout_gravity="start"
            android:text="@string/show_password"
            android:textColor="#000" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:src="@drawable/ic_baseline_arrow_forward_ios_24"
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#DDF5EF"
            android:background="#00BFA5"
            android:layout_gravity="end"
            android:contentDescription="@string/button_to_login" />

    </LinearLayout>
</LinearLayout>