<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginMainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:background="@drawable/logo_app">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="start"
            android:background="@drawable/ic_baseline_keyboard_backspace_24"
            android:contentDescription="@string/image_for_back_button" />

        <ImageView
            android:layout_marginTop="120dp"
            android:layout_marginStart="20dp"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:src="@drawable/valid_app_logo_please_load"
            android:contentDescription="@string/logo_for_the_app"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="80dp"
        android:paddingRight="24dp">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/signInButton"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:padding="18dp"
            android:backgroundTint="#DDF5EF"
            android:text="@string/sign_in"
            android:textSize="24sp"
            android:textAlignment="center"
            app:cornerRadius="20dp"
            />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/createAccButton"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:padding="18dp"
            android:backgroundTint="#DDF5EF"
            android:text="@string/create_account"
            android:textSize="24sp"
            android:textAlignment="center"
            app:cornerRadius="20dp"
            />
    </LinearLayout>
</LinearLayout>