<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="6dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Media -->
        <ImageView
            android:id="@+id/song_image"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:contentDescription="@string/song_image"
            android:scaleType="centerCrop" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="vertical">

            <!-- Title, secondary and supporting text -->

            <TextView
                android:id="@+id/song_name"
                style="@style/MyMaterialTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:maxLength="24"
                android:text="@string/song_name"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/rate"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/rate" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="2dp"
                android:src="@drawable/star_icon" />

            <TextView
                android:id="@+id/fan_score_text"
                style="@style/MyMaterialTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4.0" />

            <TextView
                android:id="@+id/fan_score_text_2"
                style="@style/MyMaterialTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/5.0" />
        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>